# chicory

./: .editorconfig  Makefile  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: merge-gate.yml
benchmarks/: Makefile  README.md  pyproject.toml
benchmarks/broker_redis/: bench_chicory.py  bench_taskiq.py
examples/: postgres_example.py  rabbitmq_example.py  redis_example.py
src/chicory/: __init__.py  app.py  config.py  context.py  exceptions.py  logging.py  result.py  task.py  types.py  utils.py  worker.py
src/chicory/backend/: __init__.py  base.py  database.py  models.py  redis.py
src/chicory/broker/: __init__.py  base.py  rabbitmq.py  redis.py
src/chicory/cli/: __init__.py  cli.py
tests/unit/: test_app.py  test_cli.py  test_config.py  test_context.py  test_optional_imports.py  test_result.py  test_task.py  test_types.py  test_utils.py  test_worker.py
