[project]
name = "chicory"
version = "0.1.0"
description = "Lightweight, async-native job queue for Python"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Davide Di Mauro", email = "dadodimauro@gmail.com" },
    { name = "Andrea Vouk", email = "andrew.vouk@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["queue", "job", "task", "async", "sqlite", "redis", "rabbitmq", "background", "worker"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Topic :: System :: Distributed Computing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic-settings>=2.12.0",
    "pydantic>=2.12.5",
]

[project.optional-dependencies]
redis = [
    "redis>=7.1.0",
]
cli = [
    "typer>=0.20.1",
]
rabbitmq = [
    "aio-pika>=9.5.8",
]

all = [
    "redis>=7.1.0",
    "typer>=0.20.1",
    "aio-pika>=9.5.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-coverage>=0.0",
    "ruff>=0.14.9",
    "ty>=0.0.5",
]

[project.urls]
Homepage = "https://github.com/dadodimauro/chicory"
Documentation = "https://github.com/dadodimauro/chicory#readme"
Repository = "https://github.com/dadodimauro/chicory"
Issues = "https://github.com/dadodimauro/chicory/issues"

[project.scripts]
chicory = "chicory.cli:app"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=chicory",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py314"

[tool.ruff.lint]
extend-select = [
    "F", # Pyflakes rules
    "W", # PyCodeStyle warnings
    "E", # PyCodeStyle errors
    "I", # Sort imports properly
    "UP", # Warn if certain things can changed due to newer Python versions
    "C4", # Catch incorrect use of comprehensions, dict, list, etc
    "FA", # Enforce from __future__ import annotations
    "ISC", # Good use of string concatenation
    "ICN", # Use common import conventions
    "RET", # Good return practices
    "SIM", # Common simplification rules
    "TID", # Some good import practices
    "TC", # Enforce importing certain types in a TYPE_CHECKING block
    "PTH", # Use pathlib instead of os.path
    "TD", # Be diligent with TODO comments
    "NPY", # Some numpy-specific things
    "T20", # Enforce typing for certain variables
]
ignore = [
    "F841", # remove unused variables
    "UP040", # new type alias syntax not supported by mypy yet
]
per-file-ignores = { "__init__.py" = ["F401"] }

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.coverage.run]
source = ["src"]
concurrency = ["thread"]
omit = [
    "*/tests/*", 
    "*/examples/*",
    "src/chicory/logging.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
